made a container within the modal div to use as a horizontal flexbox, top-aligned, positioning the icon and the header on the same line and spacing them appropriately. made the header itself a horizontal flexbox to space apart the header text and the closing button. made a subcontainer div to contain the header, text, and buttons (both buttons placed within a single div) and made it a colunmnar flexbox to space out the header, text and buttons appropriately. changed the icon's flex-shrink to 0, preventing it from shrinking around the ! icon. altered text sizes and the font-weight of the header to emphasize the title.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -19,10 +19,26 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0,0,0,.2);;
+}
+
+ .container{
+   padding: 15px;
+   display: flex;
+   align-items: top;
+   justify-content: left;
+   gap: 15px;  
+} 
+
+.subcontainer{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  font-size: 15px;
 }
 
 .icon {
+  flex-shrink: 0;
   color: royalblue;
   font-size: 26px;
   font-weight: 700;
@@ -33,6 +49,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.header{
+  display: flex;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .close-button {
@@ -46,11 +68,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
 }
 
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  font-size: 14px;
 }
 
 button.continue {
